--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /.vs
 /ConsoleApp1/obj
 /ConsoleApp1/.vs/ConsoleApp1/v16
+/ConsoleApp1/.vs/ConsoleApp1/DesignTimeBuild
+/ConsoleApp1/.vs/ConsoleApp1/v17
